fix annoying margin&padding overflow from Bootstrap rows/cols that was causing the app to have awk sideways scroll on mobile, also UI work - reworked password reset UI

--- a/css/main.css
+++ b/css/main.css
@@ -1,200 +1,211 @@
 /* Pallette URL: https://coolors.co/1d3e43-6a6353-262a21-9ccbbb-1d3422 */
 :root {
-	--japaneseIndigo: #1d3e43;
-	--wenge: #6a6353; /* Wenge - a kinda gray-brown-ish color */
-	--eerieBlack: #1b1e18; /* one shade darker than Raisin Black, for the navbar gradient */
-	--raisinBlack: #262a21;
-	--turquoiseGreen: #9ccbbb;
-	--mediumJungleGreen: #1d3422;
+  --japaneseIndigo: #1d3e43;
+  --wenge: #6a6353; /* Wenge - a kinda gray-brown-ish color */
+  --eerieBlack: #1b1e18; /* one shade darker than Raisin Black, for the navbar gradient */
+  --raisinBlack: #262a21;
+  --turquoiseGreen: #9ccbbb;
+  --mediumJungleGreen: #1d3422;
 }
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-	background: #ffffff url('../images/background.jpg') no-repeat center center
-		fixed;
-	background-size: cover;
+  background: #ffffff url('../images/background.jpg') no-repeat center center
+    fixed;
+  background-size: cover;
 }
 a {
-	color: inherit;
+  color: inherit;
 }
 a:hover {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 /* Navbar */
 #navbar {
-	background-image: linear-gradient(var(--eerieBlack), var(--raisinBlack));
-	margin-bottom: 56px;
+  background-image: linear-gradient(var(--eerieBlack), var(--raisinBlack));
+  margin-bottom: 56px;
 }
 #brand {
-	color: rgba(255, 255, 255, 0.6);
-	text-transform: uppercase;
-	letter-spacing: 2px;
+  color: rgba(255, 255, 255, 0.6);
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 #brand:hover {
-	color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.75);
 }
 .nav-link {
-	color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
 }
 .logoutBtn {
-	background: none;
-	border: none;
-	cursor: pointer;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 .logoutBtn {
-	background: none;
-	border: none;
-	cursor: pointer;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 .logoutBtn:focus {
-	outline: 0;
+  outline: 0;
 }
 .navbar-toggler:focus {
-	outline-color: var(--turquoiseGreen);
+  outline-color: var(--turquoiseGreen);
 }
 .navbar-toggler.collapsed:focus {
-	outline: none;
+  outline: none;
 }
 
 /* Homepage */
 #homepageJumbotron {
-	background-color: rgba(255, 255, 255, 0.75);
-	padding-left: 5%;
-	padding-right: 5%;
-	margin-top: -56px;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-top: -56px;
 }
 .darkBtn {
-	background-color: var(--raisinBlack);
-	color: rgba(255, 255, 255, 0.6);
+  background-color: var(--raisinBlack);
+  color: rgba(255, 255, 255, 0.6);
 }
 .darkBtn:hover,
 .darkBtn:focus {
-	background-color: var(--eerieBlack);
-	color: rgba(255, 255, 255, 0.5);
-	transition: background-color 1s ease-out;
-	transition: color 1s ease-out;
-	box-shadow: none;
+  background-color: var(--eerieBlack);
+  color: rgba(255, 255, 255, 0.5);
+  transition: background-color 1s ease-out;
+  transition: color 1s ease-out;
+  box-shadow: none;
 }
 
 /* Dashboard */
 .cardHeader {
-	font-size: 2rem;
+  font-size: 2rem;
 }
 .updatesNews {
-	margin-top: 2rem;
+  margin-top: 2rem;
 }
 .matchupNow a {
-	font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 /* Profile */
 .profileCardBody {
-	padding: 0 2.5rem;
+  padding: 0 2.5rem;
 }
 .profileDiv {
-	margin: 1.5rem 0;
+  margin: 1.5rem 0;
 }
 .profileDiv h5 {
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 .gravatar {
-	margin-bottom: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 .emailIcon {
-	vertical-align: -7px;
-	margin-right: 0.5rem;
+  vertical-align: -7px;
+  margin-right: 0.5rem;
 }
 .gravatarDiv {
-	text-align: center;
+  text-align: center;
 }
 .gravatarDiv a {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 .profileCardBody a.btn {
-	min-width: fit-content;
-	width: 11rem;
+  min-width: fit-content;
+  width: 11rem;
 }
 
 /* Icons */
 .profileCardBody i {
-	width: 16px;
-	margin-right: 0.5rem;
-	color: var(--japaneseIndigo);
+  width: 16px;
+  margin-right: 0.5rem;
+  color: var(--japaneseIndigo);
 }
 
 /* A light card w/ dark header, currently used for login/registration cards */
 .lightCard {
-	background-color: rgba(255, 255, 255, 0.8);
-	border: none;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
 }
 .lightCard input,
 .lightCard input:focus {
-	background-color: rgba(0, 0, 0, 0);
-	border-color: var(--raisinBlack);
+  background-color: rgba(0, 0, 0, 0);
+  border-color: var(--raisinBlack);
 }
 .lightCard input:focus {
-	box-shadow: 0 0 0 0.1rem rgba(29, 52, 34, 0.25); /* Medium Jungle Green color, 0.25 opacity */
+  box-shadow: 0 0 0 0.1rem rgba(29, 52, 34, 0.25); /* Medium Jungle Green color, 0.25 opacity */
 }
 .lightCard .card-header {
-	background-color: var(--raisinBlack);
-	color: rgba(255, 255, 255, 0.75);
+  background-color: var(--raisinBlack);
+  color: rgba(255, 255, 255, 0.75);
 }
 
 /* Smartphones */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-	body {
-		min-height: 100vh;
-	}
+  body {
+    min-height: 100vh;
+  }
 
-	/* Navbar */
-	#navbar {
-		margin-bottom: 0;
-	}
+  /* Fixing col and row padding & margin overflow that was causing app to have width > viewport width, allowing the app to scroll sideways & resulting in very awk appearance */
+  .row {
+    margin: 0;
+  }
+  .col-sm-12 {
+    padding: 0;
+  }
+  .profileCardBody {
+    padding: 0 1rem;
+  }
 
-	/* Homepage */
-	#homepageJumbotron {
-		text-align: center;
-		margin-top: 0;
-	}
-	#homepageJumbotron h1 {
-		font-size: 2rem;
-		line-height: 1.5;
-		margin-bottom: 20px;
-	}
-	#homepageJumbotron p {
-		line-height: 1.75;
-		margin-bottom: 20px;
-	}
+  /* Navbar */
+  #navbar {
+    margin-bottom: 0;
+  }
 
-	/* Dashboard */
-	.dashLinkDiv {
-		margin: 20px 0;
-	}
+  /* Homepage */
+  #homepageJumbotron {
+    text-align: center;
+    margin-top: 0;
+  }
+  #homepageJumbotron h1 {
+    font-size: 2rem;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  #homepageJumbotron p {
+    line-height: 1.75;
+    margin-bottom: 20px;
+  }
 
-	/* Profile */
-	.profileCardBody {
-		text-align: center;
-	}
+  /* Dashboard */
+  .dashLinkDiv {
+    margin: 20px 0;
+  }
 
-	/* Light card */
-	.lightCard {
-		border-radius: 0;
-	}
-	.lightCard .card-header {
-		border-radius: 0;
-	}
+  /* Profile */
+  .profileCardBody {
+    text-align: center;
+  }
 
-	/* Buttons */
-	.cardBtnDiv {
-		text-align: center;
-	}
-	.darkBtn {
-		width: 100%;
-	}
+  /* Light card */
+  .lightCard {
+    border-radius: 0;
+  }
+  .lightCard .card-header {
+    border-radius: 0;
+  }
+
+  /* Buttons */
+  .cardBtnDiv {
+    text-align: center;
+  }
+  .darkBtn {
+    width: 100%;
+  }
 }
